--- a/mods/ra/rules/world.yaml
+++ b/mods/ra/rules/world.yaml
@@ -165,6 +165,7 @@ World:
 	Inherits: ^BaseWorld
 	ChatCommands:
 	DevCommands:
+	ServerCommands:
 	DebugVisualizationCommands:
 	PathFinderOverlay:
 	HierarchicalPathFinderOverlay:
