--- a/mods/ts/rules/world.yaml
+++ b/mods/ts/rules/world.yaml
@@ -236,6 +236,7 @@ World:
 	Inherits: ^BaseWorld
 	ChatCommands:
 	DevCommands:
+    ServerCommands:
 	DebugVisualizationCommands:
 	PathFinderOverlay:
 	HierarchicalPathFinderOverlay:
